# backoffice

./: #ClientRoutes.hs#  .#ClientRoutes.hs  .gitignore  Application.hs  ClientHandler.hs  ClientRoutes.hs  ClientRoutes.hs~  Controllers.hs  Controllers.hs~  Foundation.hs  Import.hs  Model.hs  README.md  backoffice.cabal  cabal.config  cabal.sandbox.config  devel.hs
Controllers/: Main.hs  Main.hs~  Types.hs
Handler/: Home.hs  Main.hs
Handler/CRUD/: Parts.hs  Parts.hs~
Handler/Widgets/: Framework.hs  Framework.hs~
Handler/Widgets/Services/: Listers.hs  Listers.hs~
config/: keter.yaml  models  models.old  mysql.yml  postgresql.yml  routes
deploy/: Procfile
static/css/: bootstrap.css
templates/: controller-default-layout-wrapper.hamlet  default-layout-wrapper.hamlet  homepage-example.hamlet  homepage.hamlet
