name:             backoffice
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: Application
                     Foundation
                     Import
                     Model
                     ClientHandler
                     ClientRoutes
                     Controllers
                     Controllers.Main
                     Controllers.Types
                     Settings
                     Settings.StaticFiles
                     Settings.Development
                     Handler.Home
                     Handler.Main
                     Handler.Widgets.Framework
                     Handler.Widgets.Services.Listers
                     Handler.CRUD.Parts

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0
    else
        ghc-options:   -Wall -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable

    build-depends: base                          >= 4          && < 5
                 , http-client >= 0.4.11.2
                 -- , yesod-platform                >= 1.1    
                 , yesod                         >= 1.2       
                 , yesod-core                    >= 1.2       
                 , yesod-auth                    >= 1.2       
                 , yesod-static                  >= 1.2       
                 , yesod-form                    >= 1.3       
                 , bytestring                    >= 0.9       
                 , text                          >= 0.11      
                 , persistent                    >= 1.2       
                 , persistent-mysql              >= 1.2       
                 , persistent-template           >= 1.2       
                 , template-haskell
                 , hamlet                        >= 1.1       
                 , shakespeare-css               >= 1.0       
                 , shakespeare-js                >= 1.0.2     
                 , shakespeare-text              >= 1.0       
                 , hjsmin                        >= 0.1       
                 , monad-control                 >= 0.3       
                 , wai-extra                     >= 1.3       
                 , yaml                          >= 0.8       
                 , http-conduit                  >= 1.9       
                 , directory                     >= 1.1       
                 , warp                          >= 1.3       
                 , time                          >= 1.4              
                 , data-default
                 , aeson
                 , shakespeare
                 , conduit                       >= 1.0
                 , monad-logger                  >= 0.3
                 , fast-logger                   >= 0.3
                 , wai-logger
executable         backoffice
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , backoffice
                     , yesod

    ghc-options:       -threaded -O2

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           main.hs
    hs-source-dirs:    tests
    ghc-options:       -Wall

    build-depends: base
                 , backoffice
                 , yesod-test >= 1.2 && < 1.3
                 , yesod-core
                 , yesod
                 , persistent
                 , persistent-mysql
                 , resourcet
                 , monad-logger
                , transformers
                 , hspec
